--- a/angular.json
+++ b/angular.json
@@ -127,6 +127,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angularApp"
+    }
+  },
+  "defaultProject": "angularApp",
+  "cli": {
+    "analytics": false
+  }
 }
